--- a/working_code/requirements.txt
+++ b/working_code/requirements.txt
@@ -53,6 +53,7 @@ jupyter_core==5.8.1
 kiwisolver==1.4.8
 labmaze==1.0.6
 lxml==5.3.1
+Markdown==3.8.2
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 matplotlib==3.10.3
@@ -99,12 +100,16 @@ robot_descriptions==1.18.0
 scipy==1.15.2
 seaborn==0.13.2
 sentry-sdk==2.35.0
+shellingham==1.5.4
 simplejson==3.20.1
 six==1.17.0
 smmap==5.0.2
+stable_baselines3==2.7.0
 stack-data==0.6.3
 swig==4.3.1
 sympy==1.14.0
+tensorboard==2.20.0
+tensorboard-data-server==0.7.2
 tensorboardX==2.6.2.2
 tensorstore==0.1.72
 toolz==1.0.0
@@ -115,11 +120,13 @@ tqdm==4.67.1
 traitlets==5.14.3
 treescope==0.1.9
 trimesh==4.6.5
+typer==0.12.5
 typing-inspection==0.4.1
 typing_extensions==4.12.2
 tzdata==2025.2
 urllib3==2.3.0
 wandb==0.21.1
+watchdog==4.0.2
 wcwidth==0.2.13
 Werkzeug==3.1.3
 wrapt==1.17.2
